changed html overflow to auto to fix scrolling bug

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ html {
     width: 100%; 
     height: auto;
     scroll-behavior: smooth;
-    overflow: hidden;  
+    overflow: auto;  
 }
 
 body{
